<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dip"
    android:background="@drawable/main_bg">
    
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        
        <LinearLayout android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:orientation="vertical"
        	android:layout_marginBottom="2dip"
        	android:background="@android:color/white">
        
        <TextView android:layout_width="match_parent"
       		android:layout_height="wrap_content"
       		android:layout_marginBottom="5dip"
       		android:text="@string/permission_text"
       		style="@style/Headers"/>
    
	    <LinearLayout 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	        android:padding="5dip"
	        android:layout_marginBottom="2dip"
	        style="@style/SettingLayout">
	        
	        <TextView android:layout_width="0dip"
	            android:layout_height="wrap_content"
	            android:layout_weight="2"
	            android:text="@string/email_permission"
	            style="@style/SettingField"/>
	        
	        <Switch android:id="@+id/email_switch" 
	            android:layout_width="0dip"
	            android:layout_weight="1"
	            android:layout_height="wrap_content"/>
        
    	</LinearLayout>
	    
	    <LinearLayout 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	        android:padding="5dip"
	        android:layout_marginBottom="2dip"
	        style="@style/SettingLayout">
	        
	        <TextView android:layout_width="0dip"
	            android:layout_height="wrap_content"
	            android:layout_weight="2"
	            android:text="@string/call_permission"
	            style="@style/SettingField"/>
	        
	        <Switch android:id="@+id/call_switch" 
	            android:layout_width="0dip"
	            android:layout_weight="1"
	            android:layout_height="wrap_content"/>
        
    	</LinearLayout>
    </LinearLayout>
    	
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="2dip"
        android:background="@android:color/white">
	    
	    <TextView android:layout_width="match_parent"
	       	android:layout_height="wrap_content"
	       	android:layout_marginBottom="5dip"
	       	android:text="@string/app_theme"
	       	style="@style/Headers"/>
	        
	       	<RadioGroup android:id="@+id/radio_theme"
	       	    android:layout_width="match_parent"
	       	    android:layout_height="wrap_content"
	       	    android:padding="5dip"
	        	android:layout_marginBottom="2dip"
	        	style="@style/SettingLayout">
	            
	            <RadioButton android:id="@+id/t1" android:text="@string/theme_a" style="@style/SettingField"/>
	            <RadioButton android:id="@+id/t2" android:text="@string/theme_b" style="@style/SettingField"/>
				<RadioButton android:id="@+id/t3" android:text="@string/theme_c" style="@style/SettingField"/>
				<RadioButton android:id="@+id/t4" android:text="@string/theme_d" style="@style/SettingField"/>
	            
	        </RadioGroup>
        
    </LinearLayout>
    
     <LinearLayout android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:orientation="vertical"
        	android:layout_marginBottom="4dip"
        	android:background="@android:color/white">
        
        <TextView android:layout_width="match_parent"
       		android:layout_height="wrap_content"
       		android:layout_marginBottom="5dip"
       		android:text="@string/info_text"
       		style="@style/Headers"/>
        
        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            style="@style/SettingLayout">
            
            <EditText android:id="@+id/settings_email"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:text="@string/blank"
	            android:inputType="textEmailAddress"
	            android:hint="@string/email"
	            android:layout_marginBottom="2dip"
	            style="@style/TextField"/>
	        
	        <EditText android:id="@+id/settings_old_password"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:text="@string/blank"
	            android:inputType="textPassword"
	            android:hint="@string/password"
	            android:layout_marginBottom="2dip"
	            style="@style/PasswordField"/>
	        
	        <EditText android:id="@+id/settings_new_password"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:text="@string/blank"
	            android:inputType="textPassword"
	            android:hint="@string/new_pass"
	            android:layout_marginBottom="2dip"
	            style="@style/PasswordField"/>
	        
	        <EditText android:id="@+id/settings_confirm_password"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:text="@string/blank"
	            android:inputType="textPassword"
	            android:hint="@string/pass_confirm"
	            android:layout_marginBottom="2dip"
	            style="@style/PasswordField"/>
	        
	        <EditText android:id="@+id/settings_user_details"
	            android:layout_width="match_parent"
	            android:layout_height="100dip"
	            android:text="@string/blank"
	            android:lines="7"
	            android:maxLines="10"
	            android:maxLength="150"
	            android:inputType="text"
	            android:hint="@string/profile_text"
	            android:layout_marginBottom="2dip"
	            style="@style/TextField"/>
            
        </LinearLayout>
        
        </LinearLayout>
        
    </LinearLayout>

</ScrollView>
