<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_bg"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        style="@style/Title"
        android:layout_marginLeft="30dip"
        android:layout_marginTop="10dip"/>
    
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/subtitle"
        style="@style/SubTitle"
        android:layout_marginLeft="30dip"/>
    
    <ImageView android:id="@+id/appLogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:layout_marginBottom="20dip"
        android:src="@drawable/mapify_logo"
        android:contentDescription="@string/logo_info"/>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="30dip">
        
        <EditText android:id="@+id/signin_username"
        	android:layout_width="match_parent"
        	android:layout_height="40dip"
        	style="@style/TextField"
        	android:maxLength="16"
        	android:hint="@string/username"/>
    
    	<LinearLayout
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content"
    	    android:orientation="horizontal"
    	    android:layout_marginTop="20dip">
    	    
    	    <EditText android:id="@+id/signin_password"
        		android:layout_width="0dip"
        		android:layout_height="40dip"
        		android:layout_weight="3"
        		style="@style/PasswordField"
        		android:maxLength="16"
        		android:hint="@string/password"/>
    	
    		<Button android:id="@+id/signin_button"
    	    	android:layout_width="0dip"
    	    	android:layout_weight="1.5"
    	    	android:layout_height="40dip"
    	    	android:text="@string/sign_in"
    	    	android:textColor="@android:color/white"
    	    	android:background="@drawable/button_click"
    	    	android:textSize="18sp"/>
    	    
    	</LinearLayout>
    	
    	<LinearLayout
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content"
    	    android:orientation="horizontal">
    	    
    	    <TextView
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:text="@string/new_user_msg"
        		android:textSize="16sp"
        		android:layout_marginRight="5dip"
        		android:textColor="@android:color/darker_gray"/>
    	
    		<Button android:id="@+id/newuser_button"
    	    	android:layout_width="wrap_content"
    	    	android:layout_height="wrap_content"
    	    	android:text="@string/create_account"
    	    	android:padding="0dip"
    	    	android:textSize="16sp"
    	    	android:background="@android:color/transparent"
    	    	android:textColor="@android:color/darker_gray"/>
    	    
    	</LinearLayout>
        
    </LinearLayout>

</LinearLayout>
